--- a/app/locale/nl_NL/Idev_OneStepCheckout.csv
+++ b/app/locale/nl_NL/Idev_OneStepCheckout.csv
@@ -30,7 +30,7 @@
 "Other source, please specify ...","Andere bron, specificeer a.u.b."
 "Password","Wachtwoord"
 "Payment method","Betaling"
-"Place order now","Plaats uw bestelling"
+"Place order now","Afrekenen"
 "Please check red fields below and try again.","Controleer de rood gemarkeerde velden en probeer het opnieuw."
 "Please choose","Kies a.u.b."
 "Please choose a payment method.","Kies een betaalwijze."
