--- a/app/locale/nl_NL/Mage_Sales.csv
+++ b/app/locale/nl_NL/Mage_Sales.csv
@@ -207,7 +207,7 @@
 "Default logo, will be used in PDF and HTML documents.<br />(jpeg, tiff, png) If you see image distortion in PDF, try to use larger image","Standaard logo dat zal worden gebruikt in PDF en HTML document.<br />(jpeg, tiff, png). Als de afbeelding er onscherp uit ziet, probeer en grotere afbeelding te gebruiken."
 "Delete","Verwijder"
 "Delete Package","Verwijder pakket"
-"Denied the payment online.","De betaling door betaalplatform afgewezen"
+"Denied the payment online.","De betaling door betaalplatform afgewezen."
 "Deny Payment","Betaling afwijzen"
 "Description Message","Omschrijving"
 "Discount","Korting"
@@ -227,20 +227,20 @@
 "Enable","Inschakelen"
 "Enabled","Ingeschakeld"
 "Enter the billing last name and email/ZIP as in the order billing address","Voer uw achternaam en e-mailadres of postcode in"
-"Entered data is incorrect. Please try again.","Ingevulde data in onjuist. Probeer nogmaals"
+"Entered data is incorrect. Please try again.","Ingevulde data in onjuist. Probeer nogmaals."
 "Error to Show in Shopping Cart","Foutmelding in winkelwagen"
 "Excel XML","Excel XML"
 "Excl. Tax","Excl. btw"
 "Expired","Verlopen"
 "Explanation","Uitleg"
-"Failed to cancel the billing agreement.","Niet mogelijk om de facturatie overeenkomst te annuleren"
+"Failed to cancel the billing agreement.","Niet mogelijk om de facturatie overeenkomst te annuleren."
 "Failed to create billing agreement for this order.","Niet mogelijk om een facturatie overeenkomst aan te maken voor deze bestelling."
 "Failed to finish billing agreement wizard.","Niet mogelijk om facturatie overeenkomst-wizard af te ronden."
 "Failed to send the order email.","Niet mogelijk om een bestellingsemail te verzenden."
-"Failed to start billing agreement wizard.","Niet mogelijk om de facturatie overeenkomst-wizard te starten"
-"Failed to update the payment.","Niet mogelijk om de betaling bij te werken"
-"Failed to update the profile.","Niet mogelijk om het abonnement bij te werken"
-"Failed to void the payment.","Niet mogelijk om de betaling nietig te verklaren"
+"Failed to start billing agreement wizard.","Niet mogelijk om de facturatie overeenkomst-wizard te starten."
+"Failed to update the payment.","Niet mogelijk om de betaling bij te werken."
+"Failed to update the profile.","Niet mogelijk om het abonnement bij te werken."
+"Failed to void the payment.","Niet mogelijk om de betaling nietig te verklaren."
 "Fetch","Verkrijg"
 "File extension not known or unsupported type in the following shipment: %s","Bestandsextensie is niet bekend of niet ondersteund in de volgende verzending: %s"
 "Find Order By:","Vind bestelling op"
@@ -327,6 +327,7 @@
 "Is Closed","Afgerond"
 "Item","Artikel"
 "Item Status","Artikelstatus"
+"Item in your order","Artikel in jouw bestelling"
 "Item object is not specified.","Artikelobject niet gespecificeerd."
 "Item options declaration error.","Artikelopties declaratiefout"
 "Item ordered qty","Aantal bestelde artikelen"
@@ -336,7 +337,8 @@
 "Items Ordered","Bestelde artikelen"
 "Items Refunded","Terugbetaalde artikelen"
 "Items Shipped","Verzonden artikelen"
-"Items in the Package","Producten in het pakket"
+"Items in the Package","Artikels in het pakket"
+"Items in your order","Artikels in jouw bestelling"
 "Items maximum quantity or price do not allow checkout.","Maximaal aantal of prijs van artikel is niet toegestaan, kan niet afrekenen."
 "Items options declaration error.","Artikelopties declaratiefout"
 "Items to Invoice","Te factureren artikelen"
@@ -783,6 +785,7 @@
 "There is no need to approve this payment.","Er is geen noodzaak om deze betaling te accorderen"
 "There is no need to deny this payment.","Er is geen noodzaak om deze betaling te annuleren"
 "There is no update for the payment.","Er is geen nieuwe update voor deze betaling"
+"This is your message for us","Dit is uw boodschap voor ons"
 "This message will be shown in shopping cart when subtotal after discount less than minimum amount.","Dit bericht zal worden getoond als het subtotaal ontoereikend is."
 "This operation requires an existing transaction object.","Deze actie verplicht een bestaand transactie-object."
 "This order contains (%s) items and therefore cannot be edited through the admin interface at this time, if you wish to continue editing the (%s) items will be removed, the order will be canceled and a new order will be placed.","Deze bestelling bevat (%s) artikelen en kan daarom niet gewijzigd worden in het admin panel op dit moment. Als u toch wilt bewerken zullen de (%s) artikelen verwijderd worden, de bestelling wordt geannuleerd en een nieuwe bestelling wordt aangemaakt."
@@ -796,7 +799,7 @@
 "To Name","Aan naam"
 "To:","Tot:"
 "Total","Totaal"
-"Total %d product(s)","Totaal %d product(en)"
+"Total %d product(s)","Totaal %d artikel(s)"
 "Total (ex)","Totaal (ex)"
 "Total (inc)","Totaal (inc)"
 "Total Due","Totaal te betalen"
